task5/back-end-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end-api
  template:
    metadata:
      labels:
        app: back-end-api
        role: back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-service
spec:
  selector:
    app: back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
